fix editor scrollbar height

--- a/pgblackboard/static/app.css
+++ b/pgblackboard/static/app.css
@@ -550,7 +550,7 @@ a > small {
 }
 
 .CodeMirror-vscrollbar {
-    bottom: 27px !important;
+    bottom: 25px !important;
     }
 
 .CodeMirror-hscrollbar {
